fixed counter-about-v item text-align

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -162,6 +162,14 @@ body {
   color: #fff;
 }
 
+.counter-about-v .gdlr-core-pbf-column-content {
+  margin-left: 0;
+  text-align: left;
+}
+.counter-about-v  .gdlr-core-counter-item {
+  text-align: left;
+}
+
 //@include respond-to($xl) {
 //
 //}
